--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,10 @@ header {
 
 .quadrado-esquerdo {
     height: 100%;
-    width: 75%;
-    background-color: gray;
+    width: 77.5%;
+    background: url('https://dynaimage.cdn.cnn.com/cnn/c_fill,g_auto,w_1200,h_675,ar_16:9/https%3A%2F%2Fcdn.cnn.com%2Fcnnnext%2Fdam%2Fassets%2F210715112230-06-ras-abu-aboud-stadium.jpg') no-repeat center;
+    background-size: cover;
+    background-position-y: 0rem;
 }
 
 .quadrado-direito {
@@ -111,6 +113,16 @@ header {
     height: 47.5%;
     width: 100%;
     background-color: blueviolet;
+}
+
+.retangulo-topo-quadrado-direito {
+    background: url('https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/MAR?tx=c_fill,g_auto,q_auto') no-repeat center;
+    background-size: cover;
+}
+
+.retangulo-baixo-quadrado-direito {
+    background: url('https://cloudinary.fifa.com/api/v3/picture/flags-sq-4/CRO?tx=c_fill,g_auto,q_auto') no-repeat center;
+    background-size: cover;
 }
 
 /* ******************************************** */
