--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 *{
-    margin: 0;
-    padding: 0;
+    font-family: 'Times New Roman', Times, serif;
     box-sizing: border-box;
     background-color: #FFFFFF;
-    font-family: 'Times New Roman', Times, serif;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
 }
 
 html,body {
@@ -80,13 +81,13 @@ header {
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    background-color: green;
+    background-color: transparent;
 }
 
 .bloco-topo {
     height: 412px;
     width: 100%;
-    background-color: yellow;
+    background-color: transparent;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -103,7 +104,7 @@ header {
 .quadrado-direito {
     height: 100%;
     width: 20%;
-    background-color: aqua;
+    background-color: transparent;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -112,7 +113,7 @@ header {
 .retangulo-topo-quadrado-direito, .retangulo-baixo-quadrado-direito {
     height: 47.5%;
     width: 100%;
-    background-color: blueviolet;
+    background-color: transparent;
 }
 
 .retangulo-topo-quadrado-direito {
@@ -138,14 +139,14 @@ header {
 
 .retangulo-principal-esquerdo {
     height: 100%;
-    width: 15%;
-    background-color: black;
+    width: 18%;
+    background: url('https://img.freepik.com/fotos-premium/homem-de-jogador-de-futebol-asiatico-segurando-a-bola-no-meio_9083-3483.jpg?w=2000') no-repeat center;
+    background-size: cover;
 }
 
 .retangulo-principal-direito {
     height: 100%;
     width: 80%;
-    background-color: orange;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -154,13 +155,18 @@ header {
 .bloco-texto {
     height: 20%;
     width: 100%;
-    background-color: darkmagenta;
+    padding: 1rem;
+    font-size: 16px;
+}
+
+.bloco-texto p {
+    text-align: justify;
+    margin: 0.5rem 0;
 }
 
 .bloco-conteudo {
     height: 75%;
     width: 100%;
-    background-color: skyblue;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -169,28 +175,33 @@ header {
 .coluna {
     height: 100%;
     width: 30%;
-    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .bloco-1, .bloco-2 {
-    height: 47.5%;
+    height: 49%;
     width: 100%;
-    background-color: brown;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .coluna img {
-    height: 75%;
+    height: 70%;
     width: 100%;
 }
 
 .coluna p {
-    height: 20%;
+    height: 30%;
+    text-align: justify;
+    margin: 0 0.5rem;
+    background-color: transparent;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media screen and (max-width: 700px) {
@@ -225,7 +236,6 @@ header {
     .quadrado-direito {
         height: 30%;
         width: 100%;
-        background-color: aqua;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -239,7 +249,7 @@ header {
     /* ******************************************** */
 
     .bloco-base {
-        height: 764px;
+        height: 1005;
         width: 100%;
         flex-direction: column;
     }
@@ -251,13 +261,11 @@ header {
     .bloco-texto {
         height: 20%;
         width: 100%;
-        background-color: darkmagenta;
     }
     
     .bloco-conteudo {
         height: 75%;
         width: 100%;
-        background-color: skyblue;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -270,8 +278,14 @@ header {
         justify-content: space-between;
     }
     
+    .coluna p {
+        height: 20rem;
+    }
+    
     .bloco-1, .bloco-2 {
-        height: 47.5%;
+        height: 60%;
         width: 47.5%;
-    }    
+    }
+
+    
 }
